--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,6 @@
 Улучшения
     + выбор дома/корпуса в КЛАДРе
+    + контроль изменения/удаления результатов ЕГЭ
+    + дисциплины ЕГЭ в админке
 Исправления
     + в печати направлений подготовки недостаточно строк (надо динамически формировать PDF)
