--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,6 @@
 Улучшения
-    + выбор дома/корпуса в КЛАДРе
+    + ввод домов/корпусов по КЛАДР
+    + загрузка скан-копий до валидации
+    + многоязычность
 Исправления
     + в печати направлений подготовки недостаточно строк (надо динамически формировать PDF)
