--- a/todo.txt
+++ b/todo.txt
@@ -2,5 +2,8 @@
     + ввод домов/корпусов по КЛАДР
     + загрузка скан-копий до валидации
     + многоязычность
+    + результаты вступительных испытаний
+    + обновление заявлений из 1С
+    + регистрация в кабинете после личной подачи документов
 Исправления
     + в печати направлений подготовки недостаточно строк (надо динамически формировать PDF)
